Colaboratory を使用して作成しました

--- a/functionaljavascript.ipynb
+++ b/functionaljavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "functionaljavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/gWG9ksfwRflYUqeL5PmH",
+      "authorship_tag": "ABX9TyN0NjNejtmFVA6vfi3+5lbF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,13 +72,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K7285UpsioN4"
+      },
+      "source": [
+        "Param Sigh という人のサイトで smoothie を作るという例があって、次のようなプログラムを紹介している。\r\n",
+        "\r\n",
+        "filter と map と reduce を使っていて、それぞれの結果をつぎに流し込んでいくという、いかにも haskell 風というか、関数型プログラミングなので素晴らしいと思う。\r\n",
+        "\r\n",
+        "map ですでに名前のリストになっているので、さらにreduce で accumulate する必要はないと思うが、reduce の使い方を示したかったのだろう。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4nPpJP0tTci",
-        "outputId": "e7b7a52e-6ddd-4b8c-cdc6-4950d7e1d2cc"
+        "outputId": "49d8945b-295c-4731-fc61-19c950c756e1"
       },
       "source": [
         "# smoothie を作る\r\n",
@@ -123,7 +136,7 @@
         "\r\n",
         "console.log(smoothieBowl); // [\"Avocado\", \"Orange\", \"Banana\"]\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,10 +154,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fGf9CGaktoZB",
-        "outputId": "6f43c0d4-ae91-463f-ccaa-ba8dae8217b8"
+        "outputId": "f664999c-8936-47dc-c637-b5b9dff9378e"
       },
       "source": [
         "# accumulator(bowl,name) は dots syntax でリストに新規の名前を加えている\r\n",
+        "# function を作らないで同じことができるかどうか実験\r\n",
         "%%script node\r\n",
         "function accumulator(bowl, name) {\r\n",
         "    return [...bowl, name];\r\n",
@@ -154,44 +168,22 @@
         "let name = \"Banana\";\r\n",
         "\r\n",
         "console.log(accumulator(bowl, name));\r\n",
-        "console.log([...bowl, name]);\r\n",
-        "console.log(bowl.concat([name]))\r\n",
-        "bowl.push(name);\r\n",
+        "console.log([...bowl, name]); // dots syntax は中身を取り出す\r\n",
+        "console.log([bowl, name].flat()); // flat() は引数は深さでデフォルトが 1\r\n",
+        "console.log(bowl.concat([name]));\r\n",
+        "bowl.push(name); // push は array を変える。返り値は長さでこの場合は 3\r\n",
         "console.log(bowl);"
       ],
-      "execution_count": 34,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[ 'Avocado', 'Orange', 'Banana' ]\n",
             "[ 'Avocado', 'Orange', 'Banana' ]\n",
             "[ 'Avocado', 'Orange', 'Banana' ]\n",
             "[ 'Avocado', 'Orange', 'Banana' ]\n",
             "[ 'Avocado', 'Orange', 'Banana' ]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Zm1LcKAq9gJ2",
-        "outputId": "097be499-b451-49bc-a813-23395d9c8867",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "%%script node\r\n",
-        "console.log([\"Banana\"])"
-      ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[ 'Banana' ]\n"
           ],
           "name": "stdout"
         }
@@ -201,13 +193,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "vd_u9HbQyJVu",
-        "outputId": "2abca662-913b-41d0-93de-b5240f067a09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb706606-900a-40e5-e669-ad2d32bd102c"
       },
       "source": [
-        "# 実験 smoothie を理解する\r\n",
+        "# 実験 smoothie を関数を作らないで同じ結果にする\r\n",
         "%%script node\r\n",
         "var foods = [\r\n",
         "    { name: \"Carrot\", type: \"VEGETABLE\", cals: 41 },\r\n",
@@ -217,19 +209,12 @@
         "    { name: \"Banana\", type: \"FRUIT\", cals: 89 }\r\n",
         "];\r\n",
         "\r\n",
-        "function makeFruitSmoothie(foodsInput) {\r\n",
-        "    return foodsInput\r\n",
-        "        .filter(food => food.type === \"FRUIT\")\r\n",
-        "        .map(food => food.name)\r\n",
-        "        .reduce((accumulator, food) => [...accumulator, food],[])\r\n",
-        "}\r\n",
-        "\r\n",
-        "const smoothieBowl = makeFruitSmoothie(foods);\r\n",
-        "\r\n",
-        "console.log(smoothieBowl); // [\"Avocado\", \"Orange\", \"Banana\"]\r\n",
-        "\r\n"
+        "console.log(\r\n",
+        "    foods.filter(food => food.type === \"FRUIT\")\r\n",
+        "    .map(food => food.name)\r\n",
+        "    .reduce((accumulator, food) => [...accumulator, food],[]))"
       ],
-      "execution_count": 25,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,120 +228,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Sn3lW5hgzIrq"
-      },
-      "source": [
-        "# バッククオート backquote\n",
-        "テンプレートリテラルは、組み込み式を扱うことができる文字列リテラルです。複数行の文字列や文字列挿入機能を使用することができます。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oOdKsxqyAX2E",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 69
-        },
-        "outputId": "abe2819c-928d-4988-b1f5-b32e3541dbbc"
-      },
-      "source": [
-        "%%html\n",
-        "<script>\n",
-        "    function executeFunctions(x, y) {\n",
-        "        const add = (x, y) => x + y;\n",
-        "        const subtract = (x, y) => x - y;\n",
-        "        addPara(`sum: ${add(x, y)}`);\n",
-        "        addPara(`difference: ${subtract(x, y)}`);\n",
-        "    }\n",
-        "    function addPara(item) {\n",
-        "        let para = document.createElement('p');\n",
-        "        para.textContent = item;\n",
-        "        document.body.appendChild(para);\n",
-        "    }\n",
-        "\n",
-        "    executeFunctions(3, 4)\n",
-        "</script>"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<script>\n",
-              "    function executeFunctions(x, y) {\n",
-              "        const add = (x, y) => x + y;\n",
-              "        const subtract = (x, y) => x - y;\n",
-              "        addPara(`sum: ${add(x, y)}`);\n",
-              "        addPara(`difference: ${subtract(x, y)}`);\n",
-              "    }\n",
-              "    function addPara(item) {\n",
-              "        let para = document.createElement('p');\n",
-              "        para.textContent = item;\n",
-              "        document.body.appendChild(para);\n",
-              "    }\n",
-              "\n",
-              "    executeFunctions(3, 4)\n",
-              "</script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xHPwYxUbzctk"
-      },
-      "source": [
-        "# 構文\n",
-        "%%script false\n",
-        "\n",
-        "`string text`\n",
-        "\n",
-        "`string text line 1\n",
-        " string text line 2`\n",
-        "\n",
-        "`string text ${expression} string text`\n",
-        "\n",
-        "tag`string text ${expression} string text`\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-gRW6dVK6SX6"
-      },
-      "source": [
-        "javascript backquote\n",
-        "で検索して云々。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1HI0qrKpeF6p"
       },
       "source": [
-        "# forEach"
+        "# forEach と # for (let i = 0; i < array.length; i++) {}"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5SmztqDwtgDy"
+        "id": "PWgf9Sv-x4EM"
       },
       "source": [
-        "# for (let i = 0; i < array.length; i++) {}"
+        "# いまここ"
       ]
     },
     {
@@ -366,20 +250,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4e02921-5ed4-4d57-f1e5-9bd3aaea024d"
+        "outputId": "b8ef4575-fcd0-4d95-dad6-4c6de0f3bb0a"
       },
       "source": [
+        "# javascript で for loop を使いたい場合、まずは forEach を考える\r\n",
         "%%script node\r\n",
         "var a = [\"a\", \"b\", \"c\"];\r\n",
         "a.forEach(function(entry) {\r\n",
         "    console.log(entry);\r\n",
-        "});"
+        "});\r\n",
+        "a.forEach(item => console.log(item));"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "a\n",
+            "b\n",
+            "c\n",
             "a\n",
             "b\n",
             "c\n"
@@ -403,6 +292,33 @@
         "a.forEach(item => console.log(item));"
       ],
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JPk5OsOrCyKh",
+        "outputId": "51a3df29-f70e-4079-a6db-a73b877edfab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "let a = [\"a\", \"b\", \"c\"];\r\n",
+        "for (let i = 0; i < a.length; i++) {console.log(a[i])}"
+      ],
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,6 +383,127 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_DYaPIqcuCPm"
+      },
+      "source": [
+        "# dots syntax\r\n",
+        "%%script node\r\n",
+        "const arr1 = ['solid', 'bicolor', 'tabby'];\r\n",
+        "const arr2 = ['calico', 'tortoiseshell'];\r\n",
+        "const item = \"me\"\r\n",
+        "\r\n",
+        "console.log([item, ...arr1, ...arr2])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sn3lW5hgzIrq"
+      },
+      "source": [
+        "# バッククオート backquote\n",
+        "テンプレートリテラルは、組み込み式を扱うことができる文字列リテラルです。複数行の文字列や文字列挿入機能を使用することができます。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oOdKsxqyAX2E",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "a7294a34-5f73-4fa0-a133-7819c5992362"
+      },
+      "source": [
+        "%%html\n",
+        "<script>\n",
+        "    function executeFunctions(x, y) {\n",
+        "        const add = (x, y) => x + y;\n",
+        "        const subtract = (x, y) => x - y;\n",
+        "        addPara(`sum: ${add(x, y)}`);\n",
+        "        addPara(`difference: ${subtract(x, y)}`);\n",
+        "    }\n",
+        "    function addPara(item) {\n",
+        "        let para = document.createElement('p');\n",
+        "        para.textContent = item;\n",
+        "        document.body.appendChild(para);\n",
+        "    }\n",
+        "\n",
+        "    executeFunctions(3, 4)\n",
+        "</script>"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script>\n",
+              "    function executeFunctions(x, y) {\n",
+              "        const add = (x, y) => x + y;\n",
+              "        const subtract = (x, y) => x - y;\n",
+              "        addPara(`sum: ${add(x, y)}`);\n",
+              "        addPara(`difference: ${subtract(x, y)}`);\n",
+              "    }\n",
+              "    function addPara(item) {\n",
+              "        let para = document.createElement('p');\n",
+              "        para.textContent = item;\n",
+              "        document.body.appendChild(para);\n",
+              "    }\n",
+              "\n",
+              "    executeFunctions(3, 4)\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-gRW6dVK6SX6"
+      },
+      "source": [
+        "javascript backquote\n",
+        "で検索して云々。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zm1LcKAq9gJ2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "958f1633-e6ec-41c9-d106-01dcf9acd664"
+      },
+      "source": [
+        "%%script node\r\n",
+        "console.log([\"Banana\"])"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 'Banana' ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8gnoymejt6Ce"
@@ -522,27 +559,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Hop5HpH5uB3E"
+        "id": "Kd52BAxSviaR"
       },
       "source": [
-        "# dots syntax"
+        "# いまここ\r\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_DYaPIqcuCPm"
-      },
-      "source": [
-        "%%script node\r\n",
-        "const arr1 = ['solid', 'bicolor', 'tabby'];\r\n",
-        "const arr2 = ['calico', 'tortoiseshell'];\r\n",
-        "const item = \"me\"\r\n",
-        "\r\n",
-        "console.log([item, ...arr1, ...arr2])"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
