--- a/functionaljavascript.ipynb
+++ b/functionaljavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "functionaljavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVL9tXZF9p6aFOwui+7y3A",
+      "authorship_tag": "ABX9TyMSeU5jVXNIyhNGZROemfo/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,7 @@
       },
       "source": [
         "# メモ\n",
-        "1. Functional Prgramming 入門\n",
-        "https://codeburst.io/functional-programming-in-javascript-part-i-2ea6c592f3c1\n",
+        "\n",
         "\n",
         "1.  Transduction — Functional Programming in JavaScript  by Param Singh  \n",
         "https://codeburst.io/transduction-functional-programming-in-javascript-3b494758a868\n"
@@ -45,20 +44,23 @@
         "id": "Om4Y-lUZsxng"
       },
       "source": [
-        "\n",
         "参考:  \n",
+        "1. 関数型プログラミングの基礎 立川察理 、 長瀬嘉秀  \n",
+        "1. JavaScript関数型プログラミング 複雑性を抑える発想と実践法を学ぶ Luis Atencio、 加藤大雄  \n",
+        "1. JavaScriptで学ぶ関数型プログラミング Michael Fogus  \n",
+        "1. 関数プログラミング 大川徳之\n",
         "\n",
-        "関数型プログラミングの基礎 立川察理 、 長瀬嘉秀  \n",
-        "JavaScript関数型プログラミング 複雑性を抑える発想と実践法を学ぶ Luis Atencio、 加藤大雄  \n",
-        "JavaScriptで学ぶ関数型プログラミング Michael Fogus  \n",
-        "関数プログラミング 大川徳之\n",
+        "1. なぜ我々は頑なにforを避けるのか  \n",
         "\n",
-        "なぜ我々は頑なにforを避けるのか  \n",
-        "\n",
+        "1. \n",
         "https://blog.bitsrc.io/functional-programming-in-javascript-how-and-why-94e7a97343b  \n",
         "\n",
+        "1. \n",
         "https://github.com/akimichi/functionaljs/   \n",
         "\n",
+        "1. Functional Prgramming 入門  \n",
+        "https://codeburst.io/functional-programming-in-javascript-part-i-2ea6c592f3c1  \n",
+        "https://codeburst.io/functional-programming-in-javascript-part-ii-984203a5aee9\n",
         "\n"
       ]
     },
@@ -257,7 +259,7 @@
         "\r\n",
         "for (let i = 0; i < a.length; i++) {console.log(a[i])}"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,10 +291,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JEgXGhnIfk77",
-        "outputId": "531cb669-61ab-43e6-8c8d-e23660dad701",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "531cb669-61ab-43e6-8c8d-e23660dad701"
       },
       "source": [
         "# 次のプログラムから for loop をなくす\r\n",
@@ -318,7 +320,7 @@
         "\r\n",
         "console.log(getBestProducts(products)) "
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,10 +338,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BIrs1dgftv11",
-        "outputId": "ec4f8268-3740-4f3a-fa28-98c16f45aa6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ec4f8268-3740-4f3a-fa28-98c16f45aa6c"
       },
       "source": [
         "# 実験 for loop をなくす\r\n",
@@ -354,7 +356,7 @@
         "\r\n",
         "console.log(products.filter(product => product.rating >= 5 && product.price < 100))\r\n"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,15 +453,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vuDFa70O7G-_"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "8gnoymejt6Ce"
       },
       "source": [
@@ -511,12 +504,313 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4zpzVC6ONbuK",
+        "outputId": "eefbe8c6-6928-49bb-9404-7967cbab77f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 reducer を作らずに reduce を使う\r\n",
+        "%%script node\r\n",
+        "const array1 = [1, 2, 3, 4];\r\n",
+        "console.log(array1.reduce((a, b) => a+b));\r\n",
+        "console.log(array1.reduce((a, b) => a+b, 0));"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sCLolHijXXPi",
+        "outputId": "e2ea3392-41fa-461d-83a6-478ac921a811",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "function parabola(x) {\r\n",
+        "   return 2 * Math.pow(x, 2)  + 3\r\n",
+        "}\r\n",
+        "\r\n",
+        "console.log(parabola(2)) // 11"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmKjZHxfqrXi"
+      },
+      "source": [
+        "# composition"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8okINRuEYccN"
+      },
+      "source": [
+        "%%script node\r\n",
+        "function toJSON(response) {\r\n",
+        "    return response.json();\r\n",
+        "}\r\n",
+        "\r\n",
+        "function buildUser({ login: userName = \"\", avatar_url: image }){\r\n",
+        "    return new User({ userName, image })\r\n",
+        "}\r\n",
+        "\r\n",
+        "function buildUser(users) {\r\n",
+        "    return users.map(buildUser);\r\n",
+        "}\r\n",
+        "\r\n",
+        "function getUsers(){\r\n",
+        "    fetch(\"https://api.github.com/users\")\r\n",
+        "        .then(toJSON)\r\n",
+        "        .then(makeUserModel)\r\n",
+        "        .then(console.log);\r\n",
+        "}"
+      ],
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KrdPAICIafD8",
+        "outputId": "7312503b-a1d5-471b-ac62-26a5c258c307",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "const double = x => x * 2\r\n",
+        "const addOne = x => x + 1\r\n",
+        "const square = x => x * x\r\n",
+        "\r\n",
+        "console.log(square(double(addOne(2))))"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "36\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "65dd3wOuovt-",
+        "outputId": "8d6914c9-ea3f-4dfa-9d7c-8bd621412bdd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "const double = x => x * 2\r\n",
+        "const addOne = x => x + 1\r\n",
+        "const square = x => x * x\r\n",
+        "\r\n",
+        "const compose = (...fns) => (input) => \r\n",
+        "    fns.reduceRight((mem, fn) => fn(mem), input);\r\n",
+        "\r\n",
+        "const processNumber = compose(square, double, addOne);\r\n",
+        "\r\n",
+        "console.log(processNumber(2));\r\n"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "36\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ofq38QLAqbS8",
+        "outputId": "994fb054-3380-41af-9a73-222d6ac9cc7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "const double = x => x * 2;\r\n",
+        "const addOne = x => x + 1;\r\n",
+        "const square = x => x * x;\r\n",
+        "\r\n",
+        "const pipe = (...fns) => (input) => fns.reduce((mem, fn) => fn(mem), input);\r\n",
+        "\r\n",
+        "const processNumber = pipe(addOne, double, square);\r\n",
+        "\r\n",
+        "console.log(processNumber(2));"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "36\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a5zeQMVKq85x"
+      },
+      "source": [
+        "# currying\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wxrvk1TYrIbF",
+        "outputId": "16c429df-f18a-4860-a6fe-a20065a98642",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# currying\r\n",
+        "%%script node\r\n",
+        "const multiply = (a, b) => a * b;\r\n",
+        "// const mul = curry(multiply);\r\n",
+        "const mul = a => b => a * b\r\n",
+        "console.log(mul(2)(3))\r\n",
+        "\r\n",
+        "function add(a, b) { return a + b }\r\n",
+        "console.log([0, 2, 4, 6].map(v => add(1, v)))\r\n",
+        "\r\n",
+        "const double = mul(2)\r\n",
+        "console.log([0, 2, 4, 5].map(double))\r\n"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "[ 1, 3, 5, 7 ]\n",
+            "[ 0, 4, 8, 10 ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rv5aEU55sPLG",
+        "outputId": "25371ca5-9368-44aa-aefd-b2f13bd9a21c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "function add(a, b){return a + b}\r\n",
+        "\r\n",
+        "console.log([0, 2, 4, 6].map(v => add(1, v)))"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 1, 3, 5, 7 ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6cWzR1bNvWG7",
+        "outputId": "f842cf57-6e45-47fc-e31a-cc6ea6660a1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "export enum TodoStatus {\r\n",
+        "    Completed,\r\n",
+        "    Active,\r\n",
+        "}"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[stdin]:1\n",
+            "export enum TodoStatus {\n",
+            "^^^^^^\n",
+            "\n",
+            "SyntaxError: Unexpected token 'export'\n",
+            "    at new Script (vm.js:84:7)\n",
+            "    at createScript (vm.js:258:10)\n",
+            "    at Object.runInThisContext (vm.js:306:10)\n",
+            "    at Object.<anonymous> ([stdin]-wrapper:9:26)\n",
+            "    at Module._compile (internal/modules/cjs/loader.js:955:30)\n",
+            "    at evalScript (internal/process/execution.js:80:25)\n",
+            "    at internal/main/eval_stdin.js:29:5\n",
+            "    at Socket.<anonymous> (internal/process/execution.js:192:5)\n",
+            "    at Socket.emit (events.js:228:7)\n",
+            "    at endReadableNT (_stream_readable.js:1185:12)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Kd52BAxSviaR"
       },
       "source": [
-        "# いまここ\r\n"
+        "# いまここ\r\n",
+        "https://codeburst.io/functional-programming-in-javascript-part-ii-984203a5aee9"
       ]
     }
   ]
