Colaboratory を使用して作成しました

--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9pK0Jd3kDj9iiMq2GujLE",
+      "authorship_tag": "ABX9TyNUFq1SWu7nfvZOgFN9bf9a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "%%script node\r\n",
         "console.log(\"Hello World\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "// console.log(x * x * x)\r\n",
         "console.log(Math.pow(x,3))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,93 +156,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MJgSLBtrhZ4Y",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e242cb50-e023-4917-f09f-1a8b041a4c78"
+        "id": "B0r-r1xu41Ft",
+        "outputId": "4cf73077-d91f-420d-fcfb-56b16110e005"
       },
       "source": [
-        "%%writefile rectangle.cpp\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main (){\n",
-        "    int x,y;\n",
-        "    std::cin >> x >> y;\n",
-        "    std::cout << x * y << \" \" << (x + y) * 2 << \"\\n\";\n",
-        "}\n"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \" 5 6 \"\r\n",
+        "let arr = input.split(\" \").filter(item => item != \"\");\r\n",
+        "let a = arr[0] - 0;\r\n",
+        "let b = arr[1] - 0;\r\n",
+        "console.log(a*b, (a+b)*2)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing rectangle.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B8uIdW0DhaSf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "193d5d66-b825-4f1c-d35b-1cb39c68d7f1"
-      },
-      "source": [
-        "!g++ rectangle.cpp -o rectangle; echo 5 6 | ./rectangle"
-      ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "30 22\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Tu9V0OLq8qVV"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B0r-r1xu41Ft",
-        "outputId": "7cae0594-1895-4375-e069-aa76fc12dfa4"
-      },
-      "source": [
-        "%%script node\r\n",
-        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
-        "input = \" 5 6\"\r\n",
-        "let arr = input.split(\" \");\r\n",
-        "let a = arr[0] - 0;\r\n",
-        "let b = arr[1] - 0;\r\n",
-        "console.log(String(a)*String(b))\r\n",
-        "console.log(String(32))\r\n",
-        "console.log(parseInt(input))"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "32\n",
-            "5\n"
           ],
           "name": "stdout"
         }
@@ -263,54 +197,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aK6zM5ykj0zK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe207239-6597-4aa7-d1cf-90b6145f9a1c"
+        "id": "1xpeXjM9Aira",
+        "outputId": "66fd06de-dc2b-4305-8f53-80d418d01d30"
       },
       "source": [
-        "%%writefile watch.cpp\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main (){\n",
-        "    int h, m, s;\n",
-        "    std::cin >> s;\n",
-        "    h = s / 3600;\n",
-        "    s %= 3600;\n",
-        "    m = s / 60;\n",
-        "    s %= 60;\n",
-        "    std::cout << h << \":\" << m << \":\" << s << \"\\n\";\n",
-        "}\n"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \" 46979 \"\r\n",
+        "let s = parseInt(input);\r\n",
+        "let h = Math.floor(s / 3600);\r\n",
+        "s %= 3600\r\n",
+        "let m = Math.floor(s / 60);\r\n",
+        "s %= 60;\r\n",
+        "console.log(\"%d:%d:%d\", h, m, s)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting watch.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TbObXxU4j0n6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "326e3db5-9e93-424b-c7fc-f18464ea04d0"
-      },
-      "source": [
-        "!g++ watch.cpp -o watch; echo 46979 |./watch"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
+            "13 : 2 : 59\n",
             "13:2:59\n"
           ],
           "name": "stdout"
@@ -333,57 +242,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w5YmL12jy9DD",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bbde1ec0-9e03-48b5-a22d-09a4b4412619"
+        "id": "VhaD4tKQDKoW",
+        "outputId": "824985b5-b174-4386-a13a-cc69c6f50319"
       },
       "source": [
-        "%%writefile smalllarge.cpp\n",
-        "\n",
-        "#include <iostream>\n",
-        "#include <string>\n",
-        "\n",
-        "int main (){\n",
-        "    int a, b;\n",
-        "    std::string s;\n",
-        "    std::cin >> a >> b;\n",
-        "    if (a < b) s = \"a < b\";\n",
-        "    else if (a > b) s = \"a > b\";\n",
-        "    else s =\"a == b\";\n",
-        "    std::cout <<  s << \"\\n\";\n",
-        "}\n"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \" 2 3 \"\r\n",
+        "let arr = input.split(\" \").filter(item => item != \"\");\r\n",
+        "let a = arr[0] - 0;\r\n",
+        "let b = arr[1] - 0;\r\n",
+        "let s = \"\";\r\n",
+        "if (a < b) s = \"a < b\";\r\n",
+        "else if (a > b) s = \"a > b\";\r\n",
+        "else s = \"a == b\";\r\n",
+        "console.log(s)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing smalllarge.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jYpQaXEoy86d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6173802e-45e9-4057-aa1a-be7e237f20a6"
-      },
-      "source": [
-        "!g++ smalllarge.cpp -o smalllarge; echo 2 2 |./smalllarge"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "a == b\n"
+            "a < b\n"
           ],
           "name": "stdout"
         }
@@ -404,50 +287,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mDdA449ROeTE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "50965b07-5a96-4cbd-8afe-86bfe2580343"
+        "id": "d8NpeWhVDkI3",
+        "outputId": "9b3cfd61-b098-4a87-efcd-933abf8b6c7e"
       },
       "source": [
-        "%%writefile range01.cpp\n",
-        "\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main (){\n",
-        "    int a, b, c;\n",
-        "    std::string s;\n",
-        "    std::cin >> a >> b >> c;\n",
-        "    if ((a < b) && (b < c)) s = \"Yes\";\n",
-        "    else s = \"No\";\n",
-        "    std::cout <<  s << \"\\n\";\n",
-        "}"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \" 2 3 8 \"\r\n",
+        "let arr = input.split(\" \").filter(item => item != \"\");\r\n",
+        "let a = arr[0] - 0;\r\n",
+        "let b = arr[1] - 0;\r\n",
+        "let c = arr[2] - 0;\r\n",
+        "if ((a < b) && (b < c)) s = \"Yes\";\r\n",
+        "else s = \"No\";\r\n",
+        "console.log(s)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting range01.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vtorNJjNOeFA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e46b7623-57ef-4bb1-9a80-b458d75d18d2"
-      },
-      "source": [
-        "!g++ range01.cpp -o range01; echo 1 3 8 |./range01"
-      ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,54 +331,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JRReTAsqPdSM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "57a630db-a3be-4fb7-c014-d2df0b7e4d91"
-      },
-      "source": [
-        "%%writefile sort3num.cpp\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "#include <algorithm>\n",
-        "\n",
-        "int main (){\n",
-        "    int x;\n",
-        "    std::vector<int> v;\n",
-        "    while (std::cin >> x){\n",
-        "        v.push_back(x);\n",
-        "    }\n",
-        "\n",
-        "    std::sort(v.begin(), v.end());\n",
-        "\n",
-        "    std::cout << v[0] << ' '<< v[1] << ' '<< v[2] << \"\\n\";\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing sort3num.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "uUarukR2PdvK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a3189c8-b7a0-438e-e8fd-aad5bab48f51"
+        "outputId": "4e9f985f-1561-4c85-e4f8-efa0fdc138bb"
       },
       "source": [
-        "!g++ sort3num.cpp -o sort3num; echo 3 1 8 |./sort3num"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \"3 1 8 \"\r\n",
+        "let arr = input.split(\" \").filter(item => item != \"\").map(item => parseInt(item));\r\n",
+        "arr.sort();\r\n",
+        "console.log(arr[0], arr[1], arr[2])"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,51 +371,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5oFMYrCeCXiw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bc49cf8f-fc5b-4b06-e2cf-6d9293ab622c"
-      },
-      "source": [
-        "%%writefile circleinrectangle.cpp\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main (){\n",
-        "  int w, h, x, y, r;\n",
-        "  std::string s;\n",
-        "  std::cin >> w >> h >> x >> y >> r;\n",
-        "  if ((x >= r) && ((w - x) >= r) && (y >= r) && ((h - y) >= r))\n",
-        "    s = \"Yes\";\n",
-        "  else \n",
-        "    s = \"No\";\n",
-        "  std::cout <<  s << \"\\n\";\n",
-        "}\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Writing circleinrectangle.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Uujr1e4OCXdA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7b16f8f-75e6-47e3-9b20-cb3509e8aa7c"
+        "outputId": "715d1539-d331-4d51-c29d-930ad9371aa2"
       },
       "source": [
-        "!g++ circleinrectangle.cpp -o circleinrectangle; echo 5 4 2 2 1 |./circleinrectangle"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8')\r\n",
+        "input = \"5 4 2 2 1 \"\r\n",
+        "let arr = input.split(\" \").filter(item => item != \"\").map(item => parseInt(item));\r\n",
+        "let w = arr[0];\r\n",
+        "let h = arr[1];\r\n",
+        "let x = arr[2];\r\n",
+        "let y = arr[3];\r\n",
+        "let r = arr[4];\r\n",
+        "if ((x >= r) && ((w - x) >= r) && (y >= r) && ((h - y) >= r))\r\n",
+        "    s = \"Yes\";\r\n",
+        "else\r\n",
+        "    s = \"No\";\r\n",
+        "console.log(s)"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,63 +417,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PYe65DyOxGQm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4293c1f3-80f8-41c0-9195-300540e4f1c6"
+        "id": "lVK12ZoTxGF3"
       },
       "source": [
-        "%%writefile manyhelloworld.cpp\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main(){\n",
-        "    for (int i=0; i < 10; i++){\n",
-        "        std::cout << \"Hello World\" << \"\\n\";\n",
-        "    }\n",
+        "%%script node\r\n",
+        "for (let i = 1; i < 10; i++){\r\n",
+        "    console.log(\"Hello World\")\r\n",
         "}"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting manyhelloworld.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "lVK12ZoTxGF3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "05988336-ad3d-4f26-adea-0130a74f78a8"
+        "id": "hs1efM9UD-6_"
       },
       "source": [
-        "!g++ manyhelloworld.cpp -o manyhelloworld; echo 5 4 2 2 1 |./manyhelloworld"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n",
-            "Hello World\n"
-          ],
-          "name": "stdout"
-        }
+        "# いまここ"
       ]
     },
     {
