--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUFq1SWu7nfvZOgFN9bf9a",
+      "authorship_tag": "ABX9TyMWU5NElBdJK3Xlgi+u2Q/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,7 +171,7 @@
         "let b = arr[1] - 0;\r\n",
         "console.log(a*b, (a+b)*2)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "s %= 60;\r\n",
         "console.log(\"%d:%d:%d\", h, m, s)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +261,7 @@
         "else s = \"a == b\";\r\n",
         "console.log(s)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
         "else s = \"No\";\r\n",
         "console.log(s)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,7 @@
         "arr.sort();\r\n",
         "console.log(arr[0], arr[1], arr[2])"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
         "    s = \"No\";\r\n",
         "console.log(s)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,28 +491,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mMsDtetANGqO"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kNvVXmuXxtMQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a463e933-700a-4a20-9f8e-8f15b6ee1fd2"
+        "outputId": "83ed7dc5-3485-4954-b81c-ec309a191b08"
       },
       "source": [
-        "!g++ printestcase.cpp -o printestcase; echo 3 5 11 7 8 19 0 |./printestcase"
+        "%%script node\r\n",
+        "var input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"3 5 11 7 8 19 0  \\n 3 8 \"\r\n",
+        "input = input.split(/\\n/).filter(item => item != \"\");\r\n",
+        "console.log(input)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Case 1: 3\n",
-            "Case 2: 5\n",
-            "Case 3: 11\n",
-            "Case 4: 7\n",
-            "Case 5: 8\n",
-            "Case 6: 19\n"
+            "[ '3 5 11 7 8 19 0  ', ' 3 8 ' ]\n"
           ],
           "name": "stdout"
         }
