Colaboratory を使用して作成しました

--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/Ul8RaWd6LAqAyDGNA0a0",
+      "authorship_tag": "ABX9TyML8xnkXI/kaKoDnw++/0hA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,7 +214,7 @@
         "s %= 60;\r\n",
         "console.log(\"%d:%d:%d\", h, m, s)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +625,7 @@
         "const z = (a / b).toFixed(8);\r\n",
         "console.log(x + \" \" + y + \" \" + z);"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,7 +666,7 @@
         "const circumference = (2*Math.PI*r).toFixed(8);\r\n",
         "console.log(area + \" \" + circumference);"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,15 +675,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mMsDtetANGqO"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -708,66 +699,51 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5mbtfkNRLvAq",
+        "id": "IG_g5ecpLu2h",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b07d45b-2285-438d-e8e6-87b35c8e320d"
+        "outputId": "044476b0-b79f-4bba-f835-6d8a649f5b5b"
       },
       "source": [
-        "%%writefile simplecalculator.cpp\n",
-        "#include <iostream>\n",
-        "int main(){\n",
-        "    int a, b;\n",
-        "    char op;\n",
-        "\n",
-        "    while (1){\n",
-        "        std::cin >> a >> op >> b;\n",
-        "        if (op == '?') break;\n",
-        "        if (op == '+') std::cout << a + b << \"\\n\";\n",
-        "        else if (op == '-') std::cout << a - b << \"\\n\";\n",
-        "        else if (op == '*') std::cout << a * b << \"\\n\";\n",
-        "        else if (op == '/') std::cout << a / b << \"\\n\";\n",
-        "    };\n",
-        "    return 0;\n",
-        "}"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"1 + 2 1 * 2 1 - 2 1 / 2 0 ? 0 \"\r\n",
+        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\");\r\n",
+        "for (let i = 0; i < expr.length; i++) {\r\n",
+        "    if (i % 3 !== 0) continue;\r\n",
+        "    let a = parseInt(expr[i]);\r\n",
+        "    let op = expr[i + 1];\r\n",
+        "    let b = parseInt(expr[i + 2]);\r\n",
+        "    if (op == \"?\") break;\r\n",
+        "    if (op == '+') console.log(a + b);\r\n",
+        "    else if (op == '-') console.log(a - b);\r\n",
+        "    else if (op == '*') console.log(a * b);\r\n",
+        "    else if (op == '/') console.log(Math.floor(a / b));\r\n",
+        "    else console.log(\"error\");\r\n",
+        "}\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting simplecalculator.cpp\n"
+            "3\n",
+            "2\n",
+            "-1\n",
+            "0\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "IG_g5ecpLu2h",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bd45703a-4264-47bc-80be-3eb48fdc2b9e"
+        "id": "mMsDtetANGqO"
       },
       "source": [
-        "!g++ simplecalculator.cpp -o simplecalculator; echo 1 + 2 56 - 18 13 \\* 2 100 / 10 27 + 81 0 ? 0 |./simplecalculator"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n",
-            "38\n",
-            "26\n",
-            "10\n",
-            "108\n"
-          ],
-          "name": "stdout"
-        }
+        "# いまここ"
       ]
     },
     {
