Colaboratory を使用して作成しました

--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyML8xnkXI/kaKoDnw++/0hA",
+      "authorship_tag": "ABX9TyN5YHfEjy9ln4V4a2S5685A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -723,7 +723,7 @@
         "    else console.log(\"error\");\r\n",
         "}\r\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,15 +735,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mMsDtetANGqO"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -761,66 +752,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KnCqqTPoElUQ",
+        "id": "xs2uvrODElJy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9697e708-7be0-459a-90dd-3c1ac2a7e69a"
+        "outputId": "cd6901d0-9195-4aca-e43b-c04c4692d55f"
       },
       "source": [
-        "%%writefile minmaxsum.cpp\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
-        "\n",
-        "int main(){\n",
-        "\tint n;\n",
-        "    double a;\n",
-        "    double minnum =1000000;\n",
-        "    double maxnum =-1000000;\n",
-        "    double sum=0;\n",
-        "\tstd::cin >> n;\n",
-        "\tfor(int i = 0; i < n; i++){\n",
-        "        std::cin >> a;\n",
-        "\t\tmaxnum = std::max(maxnum, a);\n",
-        "\t\tminnum = std::min(minnum, a);\n",
-        "        sum += a;\n",
-        "\t}\n",
-        "\tstd::cout << minnum << \" \" << maxnum << \" \" << sum << \"\\n\";\n",
-        "    return 0;\n",
-        "}"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"5 10 1 5 4 17 \"\r\n",
+        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\r\n",
+        "expr.splice(0,1)\r\n",
+        "\r\n",
+        "let minnum = expr.reduce((a,b)=> Math.min(a,b));\r\n",
+        "let maxnum = expr.reduce((a,b)=> Math.max(a,b));\r\n",
+        "let sum= expr.reduce((a,b) => a + b);\r\n",
+        "\r\n",
+        "console.log( minnum + \" \" + maxnum + \" \" + sum)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting minmaxsum.cpp\n"
+            "[ 10, 1, 5, 4, 17 ]\n",
+            "1 17 37\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "xs2uvrODElJy",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5c6cc8d0-370a-4942-dab7-fd52315d159e"
+        "id": "mMsDtetANGqO"
       },
       "source": [
-        "!g++ minmaxsum.cpp -o minmaxsum; echo 5 10 1 5 4 17 |./minmaxsum"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1 17 37\n"
-          ],
-          "name": "stdout"
-        }
+        "# いまここ"
       ]
     },
     {
