--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN5YHfEjy9ln4V4a2S5685A",
+      "authorship_tag": "ABX9TyMrt3XiFlGXjGNlQAM9vSmV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -771,7 +771,7 @@
         "\r\n",
         "console.log( minnum + \" \" + maxnum + \" \" + sum)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,15 +781,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mMsDtetANGqO"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -807,87 +798,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BEATiwjSQMuf",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 84
-        },
-        "outputId": "e5004869-d8e1-4ccf-d8ca-c74393ce44b5"
-      },
-      "source": [
-        "%%html \n",
-        "<span style=\"font-family: monospace\">####<br>####<br>####<br>...</span>"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<span style=\"font-family: monospace\">####<br>####<br>####<br>...</span>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        "id": "apg_mM_ROetZ",
+        "outputId": "e27fae05-4217-4740-d278-5c29d9cb5b2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "es_4X4P5162v",
-        "outputId": "98ce7164-0b43-4e8d-c5d2-24232465cd87"
+        }
       },
       "source": [
-        "%%writefile printrectangle.cpp\n",
-        "#include <iostream>\n",
-        "int main(){\n",
-        "    int H, W;\n",
-        "    while (1){\n",
-        "        std::cin >> H >> W;\n",
-        "        if (H==0 && W==0) break;\n",
-        "        for (int i=0; i<H; i++){\n",
-        "            for (int j=0; j<W; j++){\n",
-        "                std::cout << \"#\";\n",
-        "            }\n",
-        "            std::cout << \"\\n\";\n",
-        "        }\n",
-        "        std::cout << \"\\n\";\n",
-        "    }\n",
-        "    return 0;\n",
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"3 4 5 6 2 2 0 0\"\r\n",
+        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\r\n",
+        "\r\n",
+        "let H = 0;\r\n",
+        "let W = 0;\r\n",
+        "let box = \"\";\r\n",
+        "\r\n",
+        "for (let i = 0; i < expr.length; i++){\r\n",
+        "    if (i%2 !== 0) continue;\r\n",
+        "    H = expr[i];\r\n",
+        "    W = expr[i+1];\r\n",
+        "    if (H==0 && W==0) break;\r\n",
+        "    box = (\"#\".repeat(W)+\"\\n\").repeat(H);\r\n",
+        "    console.log(box)\r\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting printrectangle.cpp\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f1ef0s4U16Vu",
-        "outputId": "c396f336-f924-48aa-ffe4-7991192705df"
-      },
-      "source": [
-        "!g++ printrectangle.cpp -o printrectangle; echo 3 4 5 6 2 2 0 0 |./printrectangle"
-      ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,6 +844,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mMsDtetANGqO"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -1005,34 +950,68 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd94837c-4af7-4d8f-d776-c319c3497e9e"
+        "outputId": "7af78368-f640-4382-8514-d183c9600239"
       },
       "source": [
-        "!g++ printframe.cpp -o printframe; echo 3 4 5 6 3 3 0 0 |./printframe"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"3 4 5 6 3 3 0 0\"\r\n",
+        "let expr = input.split(/[\\n\\s]/).filter(item => item !== \"\").map(Number);\r\n",
+        "\r\n",
+        "let H = 0;\r\n",
+        "let W = 0;\r\n",
+        "let box = \"\";\r\n",
+        "\r\n",
+        "for (let i = 0; i < expr.length; i++){\r\n",
+        "    if (i%2 !== 0) continue;\r\n",
+        "    H = expr[i];\r\n",
+        "    W = expr[i+1];\r\n",
+        "    if (H==0 && W==0) break;\r\n",
+        "    box = (\"#\".repeat(W)+\"\\n\").repeat(H);\r\n",
+        "    \r\n",
+        "    for (let i =0; i < H; i++){\r\n",
+        "        if ((i !== 0) && (i !== H-1)){\r\n",
+        "            box.splice(1,W-2,\".\");\r\n",
+        "        }\r\n",
+        "    }\r\n",
+        "    console.log(box)\r\n",
+        "}\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "####\n",
-            "#..#\n",
-            "####\n",
+            "[stdin]:18\n",
+            "            box.splice(1,W-2,\".\");\n",
+            "                ^\n",
             "\n",
-            "######\n",
-            "#....#\n",
-            "#....#\n",
-            "#....#\n",
-            "######\n",
-            "\n",
-            "###\n",
-            "#.#\n",
-            "###\n",
-            "\n"
+            "TypeError: box.splice is not a function\n",
+            "    at [stdin]:18:17\n",
+            "    at Script.runInThisContext (vm.js:116:20)\n",
+            "    at Object.runInThisContext (vm.js:306:38)\n",
+            "    at Object.<anonymous> ([stdin]-wrapper:9:26)\n",
+            "    at Module._compile (internal/modules/cjs/loader.js:955:30)\n",
+            "    at evalScript (internal/process/execution.js:80:25)\n",
+            "    at internal/main/eval_stdin.js:29:5\n",
+            "    at Socket.<anonymous> (internal/process/execution.js:192:5)\n",
+            "    at Socket.emit (events.js:228:7)\n",
+            "    at endReadableNT (_stream_readable.js:1185:12)\n"
           ],
-          "name": "stdout"
+          "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4-lYCXZgRm5o"
+      },
+      "source": [
+        "%%script node\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
